# emoji-favicon

./: emoji-favicon.cabal  flake.nix
