cabal-version:   3.4
name:            emoji-favicon
version:         0.1.0.0
license:         ISC
license-file:    LICENSE
author:          Jezen Thomas
maintainer:      jezen@supercede.com
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md
synopsis:
  Emoji → SVG favicon (data: URI) with optional TH to generate per-emoji tags

description:
  Pure helpers to produce SVG emoji favicons as data: URIs and Blaze HTML tags.

source-repository head
  type:     git
  location: https://github.com/SupercedeTech/emoji-favicon

library
  ghc-options:        -Wall
  default-extensions: ImportQualifiedPost
  exposed-modules:    EmojiFavicon
  other-modules:
    EmojiFavicon.TH
    EmojiFavicon.Widget

  build-depends:
    , base
    , blaze-html
    , bytestring
    , containers
    , http-types
    , template-haskell
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010
